--- a/GitRepo/Base.lproj/Main.storyboard
+++ b/GitRepo/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                     <action selector="auth:" destination="hb9-Rn-JiH" eventType="touchUpInside" id="NJS-Zm-2G0"/>
                                 </connections>
                             </button>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="A2w-BP-5jq">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="A2w-BP-5jq">
                                 <rect key="frame" x="195" y="776" width="24" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="Mqo-Ah-1rY"/>
@@ -209,23 +209,19 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4XD-sZ-1N3">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4XD-sZ-1N3">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="38"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rjN-Lj-rnU">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="github.com/icerockdev/moko-resources" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWE-du-mLo">
-                                                        <rect key="frame" x="65" y="15" width="313" height="21"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                        <color key="textColor" systemColor="linkColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XXX-Vb-0fG">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="38"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="link" title="github.com/tunetab" imagePadding="10"/>
+                                                <connections>
+                                                    <action selector="followLink:" destination="eCN-ou-pvD" eventType="touchUpInside" id="fdU-wF-xs9"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </stackView>
                                 </subviews>
                                 <constraints>
@@ -247,10 +243,22 @@
                         <viewLayoutGuide key="safeArea" id="bOA-pv-WPT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="RepoDetailInfo" id="Rk2-d3-Fc8"/>
+                    <navigationItem key="navigationItem" title="RepoDetailInfo" id="Rk2-d3-Fc8">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="70b-N9-zGR">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Ngz-Gn-jc8">
+                                <rect key="frame" x="302" y="6" width="92" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Vector"/>
+                                <connections>
+                                    <action selector="exitAccount:" destination="eCN-ou-pvD" eventType="touchUpInside" id="A7w-gz-Ti3"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="activityIndicator" destination="d22-Rm-do5" id="5yB-wV-EaS"/>
-                        <outlet property="linkLabel" destination="JWE-du-mLo" id="8TN-Qt-Aa1"/>
+                        <outlet property="linkButton" destination="XXX-Vb-0fG" id="iug-5N-X35"/>
                         <outlet property="scrollView" destination="LUj-Uk-2Gj" id="23a-Jo-zCS"/>
                     </connections>
                 </viewController>
@@ -298,9 +306,7 @@
     <resources>
         <image name="Group" width="96" height="96"/>
         <image name="Vector" width="22" height="18"/>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="link" width="24" height="24"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
